# c_debug_template

./: CMakeLists.txt  Makefile  README.md  main  main.c
cmd/histogram/: CmakeLists.txt  Makefile  main.c  test.txt
main.dSYM/Contents/Resources/DWARF/: main
release_build/: CMakeCache.txt  Makefile  cmake_install.cmake  main
src/application/: hist.c  hist.h
src/utils/: count.c  double_linked_list.c  double_linked_list.h  infinite_array.c  infinite_array.h  linked_list.c  linked_list.h  node.c  node.h  sort_num_linked_list.c  sort_num_linked_list.h  str_pointer.c  str_pointer.h
